<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appdev.playover.SignUp_Fragment">
        <LinearLayout
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_logo" />

            <TextView
                android:id="@+id/lblsignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="#757575"
                android:textSize="30sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:weightSum="2"
                >
                <EditText
                    android:layout_marginStart="20dp"
                    android:id="@+id/firstNameSignUp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name_signup"
                    android:inputType="text"
                    android:background="@android:drawable/edit_text"
                    />
                <EditText
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/lastNameSignUp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name_signup"
                    android:inputType="text"
                    android:background="@android:drawable/edit_text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/positionSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/position_signup"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@android:drawable/edit_text"
                    />
                <EditText
                    android:id="@+id/emailSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_address_signup"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:inputType="textEmailAddress"
                    android:background="@android:drawable/edit_text"
                    />
                <EditText
                    android:id="@+id/passwordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:inputType="textPassword"
                    android:background="@android:drawable/edit_text"
                    />
                <EditText
                    android:id="@+id/verification_Password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/verify_password_main"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:inputType="textPassword"
                    android:background="@android:drawable/edit_text"/>
                <TextView
                    android:id="@+id/termsSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:textSize="12sp"
                    android:text="@string/terms_signup"/>

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="#4CAF50"
                    android:text="@string/sign_up_signup"
                    android:textColor="@color/offWhitePalette"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
</FrameLayout>