...
        android:layout_margin="15dp"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblfeature_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:paddingStart="20dp"
            android:paddingTop="25dp"
            android:paddingEnd="20dp"
...
            android:layout_height="60dp"
            android:text="And connect with your new crew"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/signup_button_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:background="#4CAF50"
...
