<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appdev.playover.Verification_Fragment">

 <LinearLayout
     android:id="@+id/verification"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginTop="50dp">
     <TextView
         android:id="@+id/family"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="30sp"
         android:textColor="@android:color/black"
         android:text="@string/welcome_main"
         android:textAlignment="center"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"/>
     <TextView
         android:id="@+id/verification_message"
         android:textSize="22sp"
         android:textColor="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_marginTop="35dp"
         android:weightSum="3">
         <EditText
             android:id="@+id/verificationEdit"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="2"
             android:hint="@string/code_main"
             android:inputType="number"
             android:layout_marginStart="30dp"
             android:background="@android:drawable/edit_text"
             />

         <Button
             android:id="@+id/verify"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="30dp"
             android:layout_weight="1"
             android:background="#4CAF50"
             android:text="@string/btnverify_main"
             android:textAlignment="center"
             android:textColor="@color/offWhitePalette" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
         >
         <TextView
             android:layout_marginStart="30dp"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:id="@+id/didntReceive"
             android:text="@string/didn_t_receive_it_main"
             android:gravity="end"
             android:textAlignment="gravity"/>
         <TextView
             android:layout_width="100dp"
             android:layout_marginEnd="30dp"
             android:layout_height="match_parent"
             android:id="@+id/resendVerification"
             android:textColor="@color/link_color"
             android:text="@string/re_send_main"
             android:gravity="center"
             android:textAlignment="gravity"/>
     </LinearLayout>
 </LinearLayout>

</FrameLayout>